# opencv-demonstrator

./: CMakeLists.txt
libcutil/: CMakeLists.txt
libcutil/include/mmi/: serial-ui.hpp
libcutil/src/mmi/: ColorCellRenderer2.cc
libocvext/: CMakeLists.txt
libocvext/src/: calib.cc  fourier.cc  hough.cc  ocvext.cc  thinning.cc  vue-image-old.txt  vue-image.cc
libocvext/src/outils/: scan.cc
libocvext/src/test/: test-fourier.cc
ocvdemo/: CMakeLists.txt
ocvdemo/include/: ocvdemo-item.hpp  ocvdemo.hpp
ocvdemo/include/demo-items/: reco-demo.hpp  video-demo.hpp
ocvdemo/src/: gestion-souris.cc  ocvdemo-export.cc  ocvdemo-misc.cc  test-webcam.cc
ocvdemo/src/demo-items/: 3d.cc  appauto.cc  demo-fourier.cc  espaces-de-couleurs.cc  filtrage.cc  gradient-demo.cc  histo.cc  morpho-demo.cc  ocr.cc  photographie.cc  reco-demo.cc  segmentation.cc  seuillage.cc  video-demo.cc
ocvdemo/src/tools/: image-mosaic.cc  image-selecteur.cc
